--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,5 @@ add_subdirectory (libpoker)
 add_subdirectory (server)
 #add_subdirectory (client)
 add_subdirectory (test)
+add_subdirectory (system)
+
