--- a/trunk/src/server/CMakeLists.txt
+++ b/trunk/src/server/CMakeLists.txt
@@ -2,10 +2,15 @@ include_directories (
 	${POKER_SOURCE_DIR}/src
 	${POKER_SOURCE_DIR}/src/network
 	${POKER_SOURCE_DIR}/src/libpoker
+	${POKER_SOURCE_DIR}/src/system
 	${POKER_SOURCE_DIR}/src/server
 	
 )
-link_directories(${POKER_SOURCE_DIR}/src/network ${POKER_SOURCE_DIR}/src/libpoker)
+link_directories(
+	${POKER_SOURCE_DIR}/src/network
+	${POKER_SOURCE_DIR}/src/libpoker
+	${POKER_SOURCE_DIR}/src/system
+)
 
 IF (WIN32)
 	# http://sources.redhat.com/binutils/docs-2.15/binutils/windres.html
@@ -20,8 +25,8 @@ ENDIF (WIN32)
 
 IF (WIN32)
 	add_executable (pserver pserver.cpp pserver_res.obj game.cpp)
-	target_link_libraries(pserver Poker Network ws2_32)
+	target_link_libraries(pserver Poker Network System ws2_32)
 ELSE (WIN32)
 	add_executable (pserver pserver.cpp game.cpp)
-	target_link_libraries(pserver Poker Network)
+	target_link_libraries(pserver Poker Network System)
 ENDIF (WIN32)
