added stack-protect compile flags
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/trunk@22 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ MESSAGE("Target platform is ${PLATFORM_STR}")
 if (DEBUG)
 	add_definitions(-g -O0 -DDEBUG=${DEBUG})
 else (DEBUG)
-	add_definitions(-O2)
+	add_definitions(-O2 -fstack-protector -fstack-protector-all)
 endif (DEBUG)
 
 add_definitions(-Wall)  #-pedantic #-DPLATFORM_STR=${PLATFORM_STR}
