--- a/trunk/src/libpoker/CMakeLists.txt
+++ b/trunk/src/libpoker/CMakeLists.txt
@@ -1,4 +1,9 @@
-include_directories (${POKER_SOURCE_DIR}/src ${POKER_SOURCE_DIR}/src/libpoker)
+include_directories (
+	${POKER_SOURCE_DIR}/src
+	${POKER_SOURCE_DIR}/src/libpoker
+	${POKER_SOURCE_DIR}/src/network
+	${POKER_SOURCE_DIR}/src/server
+)
 
 add_library(Poker
 	GameDebug.cpp
