--- a/trunk/src/libpoker/CMakeLists.txt
+++ b/trunk/src/libpoker/CMakeLists.txt
@@ -1,13 +1,11 @@
 include_directories (
 	${POKER_SOURCE_DIR}/src
 	${POKER_SOURCE_DIR}/src/libpoker
-	${POKER_SOURCE_DIR}/src/network
-	${POKER_SOURCE_DIR}/src/server
 )
 
 add_library(Poker
 	GameDebug.cpp
 	Card.cpp Deck.cpp HoleCards.cpp CommunityCards.cpp
-	GameLogic.cpp GameController.cpp Table.cpp
+	GameLogic.cpp
 	Player.cpp
 )
