moved classes GameController and Table to server-dir
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/trunk@61 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/src/libpoker/CMakeLists.txt
+++ b/src/libpoker/CMakeLists.txt
@@ -1,13 +1,11 @@
 include_directories (
 	${POKER_SOURCE_DIR}/src
 	${POKER_SOURCE_DIR}/src/libpoker
-	${POKER_SOURCE_DIR}/src/network
-	${POKER_SOURCE_DIR}/src/server
 )
 
 add_library(Poker
 	GameDebug.cpp
 	Card.cpp Deck.cpp HoleCards.cpp CommunityCards.cpp
-	GameLogic.cpp GameController.cpp Table.cpp
+	GameLogic.cpp
 	Player.cpp
 )
