few more work on snapshots; added protocol.h
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/trunk@106 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -3,6 +3,7 @@ include_directories (
 	${POKER_SOURCE_DIR}/src/network
 	${POKER_SOURCE_DIR}/src/libpoker
 	${POKER_SOURCE_DIR}/src/system
+	${POKER_SOURCE_DIR}/src/server
 	${POKER_SOURCE_DIR}/src/client
 )
 link_directories(
