contructed method for debugging gamecontroller in test-app
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/trunk@110 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -3,6 +3,7 @@ include_directories (
 	${POKER_SOURCE_DIR}/src/network
 	${POKER_SOURCE_DIR}/src/libpoker
 	${POKER_SOURCE_DIR}/src/system
+	${POKER_SOURCE_DIR}/src/server
 	${POKER_SOURCE_DIR}/src/test
 	
 )
@@ -12,7 +13,11 @@ link_directories(
 	${POKER_SOURCE_DIR}/src/system
 )
 
-add_executable (test test.cpp)
+add_executable (test
+	test.cpp
+	../server/GameController.cpp
+	../server/Table.cpp
+)
 target_link_libraries(test Poker)
 
 add_executable (simulator simulator.cpp)
