--- a/trunk/src/test/CMakeLists.txt
+++ b/trunk/src/test/CMakeLists.txt
@@ -3,6 +3,7 @@ include_directories (
 	${POKER_SOURCE_DIR}/src/network
 	${POKER_SOURCE_DIR}/src/libpoker
 	${POKER_SOURCE_DIR}/src/system
+	${POKER_SOURCE_DIR}/src/server
 	${POKER_SOURCE_DIR}/src/test
 	
 )
@@ -12,7 +13,11 @@ link_directories(
 	${POKER_SOURCE_DIR}/src/system
 )
 
-add_executable (test test.cpp)
+add_executable (test
+	test.cpp
+	../server/GameController.cpp
+	../server/Table.cpp
+)
 target_link_libraries(test Poker)
 
 add_executable (simulator simulator.cpp)
