Makefiles: renamed project-var; renamed system-test binary due to name conflict with mingw32-make
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/trunk@152 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ add_definitions(-Wall)  #-pedantic #-DPLATFORM_STR=${PLATFORM_STR}
 
 ################################################################################
 
-project (POKER)
+project (HOLDINGNUTS)
 
 add_subdirectory (src)
 
