--- a/trunk/src/system/CMakeLists.txt
+++ b/trunk/src/system/CMakeLists.txt
@@ -1,3 +1,3 @@
-include_directories (${POKER_SOURCE_DIR}/src ${POKER_SOURCE_DIR}/src/system)
+include_directories (${HOLDINGNUTS_SOURCE_DIR}/src ${HOLDINGNUTS_SOURCE_DIR}/src/system)
 
 add_library(System Tokenizer.cpp)
