--- a/trunk/src/server/CMakeLists.txt
+++ b/trunk/src/server/CMakeLists.txt
@@ -12,17 +12,23 @@ link_directories(
 )
 
 IF (WIN32)
-	# http://sources.redhat.com/binutils/docs-2.15/binutils/windres.html
-	# http://www.resedit.net
-	ADD_CUSTOM_COMMAND( OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/pserver_res.obj
-		COMMAND ${WINDRES}
-		-I${CMAKE_CURRENT_SOURCE_DIR}
-		-o ${CMAKE_CURRENT_BINARY_DIR}/pserver_res.obj
-		< ${CMAKE_CURRENT_SOURCE_DIR}/pserver.rc
-	)
-	
-	LIST(APPEND aux_obj pserver_res.obj)
-	LIST(APPEND aux_lib ws2_32)
+	IF (MINGW)
+		LIST(APPEND aux_lib ws2_32)
+		
+		# http://sources.redhat.com/binutils/docs-2.15/binutils/windres.html
+		# http://www.resedit.net
+		ADD_CUSTOM_COMMAND( OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/pserver_res.obj
+			COMMAND ${WINDRES}
+			-I${CMAKE_CURRENT_SOURCE_DIR}
+			-o ${CMAKE_CURRENT_BINARY_DIR}/pserver_res.obj
+			< ${CMAKE_CURRENT_SOURCE_DIR}/pserver.rc
+		)
+		LIST(APPEND aux_obj pserver_res.obj)
+	ELSE (MINGW)
+		LIST(APPEND aux_lib wsock32)
+		
+		# FIXME: use VC resource compiler rc.exe
+	ENDIF (MINGW)
 ENDIF (WIN32)
 
 
