moved test-client to test-dir; started with client: main structure and layout draft
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/trunk@156 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ IF (NOT PLATFORM_STR)
  add_definitions(-DPLATFORM_UNIX)
 ENDIF (NOT PLATFORM_STR)
 
-MESSAGE("Target platform is ${PLATFORM_STR}")
+#MESSAGE("Target platform is ${PLATFORM_STR}")
 
 ################################################################################
 
