some more work on client; small adjustments on server/libPoker
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/trunk@158 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,8 @@ ENDIF (NOT PLATFORM_STR)
 
 #MESSAGE("Target platform is ${PLATFORM_STR}")
 
+option (UPDATE_TRANSLATIONS "Update source translations")
+
 ################################################################################
 
 if (DEBUG)
