created translation directory; imported german translation
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/trunk@215 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -71,7 +71,7 @@ target_link_libraries (
 #http://www.cmake.org/Wiki/CMake:How_To_Build_Qt4_Software
 #http://doc.trolltech.com/4.3/i18n.html
 
-file (GLOB TRANSLATIONS_FILES *.ts)
+file (GLOB TRANSLATIONS_FILES translations/*.ts)
 
 file (GLOB SRC_FILES *.cpp *.hpp)
 
