--- a/src/system/CMakeLists.txt
+++ b/src/system/CMakeLists.txt
@@ -1,3 +1,4 @@
 include_directories (${HOLDINGNUTS_SOURCE_DIR}/src ${HOLDINGNUTS_SOURCE_DIR}/src/system)
 
+add_library(Network Network.c)
 add_library(System Tokenizer.cpp)
