--- a/trunk/src/server/CMakeLists.txt
+++ b/trunk/src/server/CMakeLists.txt
@@ -34,6 +34,6 @@ add_executable (pserver
 )
 
 target_link_libraries(pserver
-	Poker Network System
+	Poker Network SysAccess System
 	${aux_lib}
 )
