moved win32 app-icons to separate res-directory
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/trunk@264 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/src/client/pclient.rc
+++ b/src/client/pclient.rc
@@ -3,6 +3,6 @@
 #define IDC_STATIC (-1)
 #endif
 
-#define IDI_APPICON   102
+#define IDI_APPICON   100
 
-IDI_APPICON   ICON    "pclient.ico"
+IDI_APPICON   ICON    "res/pclient.ico"
