--- a/src/server/pserver.rc
+++ b/src/server/pserver.rc
@@ -3,6 +3,6 @@
 #define IDC_STATIC (-1)
 #endif
 
-#define IDI_APPICON   102
+#define IDI_APPICON   100
 
-IDI_APPICON   ICON    "pserver.ico"
+IDI_APPICON   ICON    "res/pserver.ico"
