--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -46,12 +46,16 @@ include_directories (
 	#${QT_INCLUDES}    # done by QT_USE_FILE
 )
 
+SET(QtApp_RCCS pclient.qrc)
+
+QT4_ADD_RESOURCES(QtApp_RCC_SRCS ${QtApp_RCCS})
+
 QT4_WRAP_CPP(sources_MOC pclient.hpp WMain.hpp WTable.hpp ChatBox.hpp DealerButton.hpp Seat.hpp EditableSlider.hpp)
 
 add_executable (
 	pclient
 	WIN32    # when building for windows: do not show the console window
-	pclient.cpp ${aux_obj} WMain.cpp WTable.cpp ChatBox.cpp DealerButton.cpp Seat.cpp SeatImages.cpp EditableSlider.cpp ${sources_MOC}
+	pclient.cpp ${aux_obj} WMain.cpp WTable.cpp ChatBox.cpp DealerButton.cpp Seat.cpp SeatImages.cpp EditableSlider.cpp ${sources_MOC} ${QtApp_RCC_SRCS}
 )
 
 target_link_libraries (
