--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -50,12 +50,12 @@ SET(QtApp_RCCS pclient.qrc)
 
 QT4_ADD_RESOURCES(QtApp_RCC_SRCS ${QtApp_RCCS})
 
-QT4_WRAP_CPP(sources_MOC pclient.hpp WMain.hpp WTable.hpp ChatBox.hpp DealerButton.hpp Seat.hpp EditableSlider.hpp)
+QT4_WRAP_CPP(sources_MOC pclient.hpp WMain.hpp WTable.hpp ChatBox.hpp DealerButton.hpp Seat.hpp EditableSlider.hpp TimeOut.hpp)
 
 add_executable (
 	pclient
 	WIN32    # when building for windows: do not show the console window
-	pclient.cpp ${aux_obj} WMain.cpp WTable.cpp ChatBox.cpp DealerButton.cpp Seat.cpp SeatImages.cpp EditableSlider.cpp ${sources_MOC} ${QtApp_RCC_SRCS}
+	pclient.cpp ${aux_obj} WMain.cpp WTable.cpp ChatBox.cpp DealerButton.cpp Seat.cpp SeatImages.cpp EditableSlider.cpp TimeOut.cpp ${sources_MOC} ${QtApp_RCC_SRCS}
 )
 
 target_link_libraries (
