client: moved from own libNetwork to QT-Network library
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/trunk@325 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -30,6 +30,8 @@ IF (WIN32)
 ENDIF (WIN32)
 
 
+SET( QT_USE_QTNETWORK true )
+
 Find_Package ( Qt4 REQUIRED )
 
 # http://www.qtforum.org/article/26305/problem-running-configure-to-install-qt.html
@@ -58,7 +60,7 @@ add_executable (
 
 target_link_libraries (
    pclient
-   Poker Network SysAccess System
+   Poker SysAccess System
    ${QT_LIBRARIES}
    ${aux_lib}
 )
