fixed build-bug with older CMake FindQt4 module versions; fixed table testing mode
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/trunk@377 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -39,6 +39,7 @@ SET(QtApp_RCCS pclient.qrc)
 
 QT4_ADD_RESOURCES(QtApp_RCC_SRCS ${QtApp_RCCS})
 
+# Warning: older CMake versions (2.6-patch-0) do not provide moc-qt4 with preprocessor definitions
 QT4_WRAP_CPP (
 	sources_MOC
 	pclient.hpp WMain.hpp SettingsDialog.hpp AboutDialog.hpp StringListModel.hpp
