first working draft of playing sounds
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code@384 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/branches/sdl-audio/src/client/CMakeLists.txt
+++ b/branches/sdl-audio/src/client/CMakeLists.txt
@@ -58,6 +58,7 @@ add_executable (
 	pclient.cpp ${aux_obj}
 	WMain.cpp SettingsDialog.cpp AboutDialog.cpp StringListModel.cpp
 	WTable.cpp ChatBox.cpp DealerButton.cpp Seat.cpp SeatImages.cpp EditableSlider.cpp TimeOut.cpp
+	Audio.c
 	${sources_MOC} ${QtApp_RCC_SRCS}
 )
 
