renamed server and client binary
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/trunk@459 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -28,12 +28,12 @@ IF (WIN32)
 ENDIF (WIN32)
 
 
-add_executable (pserver
+add_executable (holdingnuts-server
 	pserver.cpp ${aux_obj}
 	game.cpp GameController.cpp Table.cpp
 )
 
-target_link_libraries(pserver
+target_link_libraries(holdingnuts-server
 	Poker Network SysAccess System
 	${aux_lib}
 )
