added build-option for building without sound/SDL support
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/trunk@473 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project (HOLDINGNUTS)
 
 # switch features on/off
 option (ENABLE_CLIENT	"Configure for client"		On)
+option (ENABLE_AUDIO	"Configure client with audio"	On)
 option (ENABLE_SERVER	"Configure for server"		On)
 option (ENABLE_TEST	"Configure for test-utils"	Off)
 
