added build-option for building with additional compiled-in path to data-dir
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/trunk@474 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -50,11 +50,19 @@ IF (USE_SVNREV)
 	ENDIF (SVNVERSION)
 ENDIF (USE_SVNREV)
 
+
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
 	add_definitions(-DDEBUG=1)
 endif (CMAKE_BUILD_TYPE STREQUAL "Debug")
 
-add_definitions(-Wall)  #-pedantic -fstack-protector -fstack-protector-all
+# compiled in data-dir path
+if (DATA_DIR)
+	add_definitions(-DDATA_DIR=\"${DATA_DIR}\")
+endif (DATA_DIR)
+
+
+# additional definitions
+add_definitions(-Wall)
 
 ################################################################################
 
