fixed problem with unsafe RPATHs included in binaries
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/trunk@499 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -68,6 +68,11 @@ endif (CMAKE_DATA_PATH)
 # additional definitions
 add_definitions(-Wall)
 
+# do not include RPATHs to our static libs in binaries
+#set (CMAKE_BUILD_WITH_INSTALL_RPATH false)
+set (CMAKE_SKIP_BUILD_RPATH true)
+
+
 ################################################################################
 
 # libraries
