first test with gnutls: push/pull callbacks, anonymous authentication
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/branches/protocol_ng@695 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -30,3 +30,8 @@ target_link_libraries(simulator Poker)
 add_executable (systest system.cpp)
 target_link_libraries(systest System SysAccess)
 
+# GnuTLS anon client example
+if (ENABLE_CRYPT)
+	add_executable(gnutls_client_anon gnutls_client_anon.c)
+	target_link_libraries(gnutls_client_anon ${aux_lib})
+endif (ENABLE_CRYPT)
