OOP approach for sqlite handling; implemented database wrapper library; added test program
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/branches/sqlite@705 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/src/system/CMakeLists.txt
+++ b/src/system/CMakeLists.txt
@@ -3,3 +3,4 @@ include_directories (${HOLDINGNUTS_SOURCE_DIR}/src ${HOLDINGNUTS_SOURCE_DIR}/src
 add_library(Network Network.c)
 add_library(SysAccess SysAccess.c)
 add_library(System Tokenizer.cpp ConfigParser.cpp Logger.c)
+add_library(Database Database.cpp)
