fixed Makefiles: do not use sqlite for the client
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/branches/sqlite@718 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,8 @@ ENDIF (in_source)
 
 ################################################################################
 
-SET( CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake )
+# declare path for own CMake modules
+SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 
 # Doxygen documentation
 if (BUILD_DOCUMENTATION)
