--- a/src/system/CMakeLists.txt
+++ b/src/system/CMakeLists.txt
@@ -3,6 +3,10 @@ include_directories (
 	${HOLDINGNUTS_SOURCE_DIR}/src/system
 )
 
+if (ENABLE_SQLITE)
+	include_directories(${SQLITE3_INCLUDE_DIR})
+endif (ENABLE_SQLITE)
+
 add_library(Network Network.c)
 add_library(SysAccess SysAccess.c)
 add_library(System Tokenizer.cpp ConfigParser.cpp Logger.c)
