CMakeLists: link against libnetwork.so if BEOS is defined
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/branches/haiku-0.0.5@740 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -27,6 +27,11 @@ IF (WIN32)
 	ENDIF (MINGW)
 ENDIF (WIN32)
 
+# FIXME: Which one is the correct define for Haiku?
+IF (BEOS)
+	LIST(APPEND aux_lib network)
+ENDIF (BEOS)
+
 
 add_executable (holdingnuts-server
 	pserver.cpp ${aux_obj}
