--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -25,6 +25,11 @@ IF (WIN32)
 	ENDIF (MINGW)
 ENDIF (WIN32)
 
+# FIXME: Which one is the correct define for Haiku?
+IF (BEOS)
+       LIST(APPEND aux_lib network)
+ENDIF (BEOS)
+
 
 # use SDL only for audio
 if (ENABLE_AUDIO)
