moved ranking code into separate file; removed requests for player-/ranking-info
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/trunk@746 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -45,7 +45,7 @@ endif (ENABLE_SQLITE)
 
 add_executable (holdingnuts-server
 	pserver.cpp ${aux_obj}
-	game.cpp GameController.cpp Table.cpp
+	game.cpp GameController.cpp Table.cpp ranking.cpp
 )
 
 target_link_libraries(holdingnuts-server
